# xRLAgents

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: WrapperAtariRam.py  atari_pacman_main.py  atari_pacman_ram_main.py  atari_pacman_rnn_main.py
examples/CartPole-v1/: WrapperRobotics.py  agent_config.py  cart_pole_main.py
examples/Endless-MortarMayhem-v0/: WrapperMemoryGym.py  train.py
examples/Endless-MysteryPath-v0/: WrapperMemoryGym.py  train.py
examples/MsPacmanNoFrameskip-v4/: WrapperAtari.py  atari_pacman_main.py
examples/MsPacmanNoFrameskip-v4_ram/: agent_config.py  atari_pacman_main.py
examples/MsPacmanNoFrameskip-v4_rnn/: agent_config.py  atari_pacman_main.py
examples/SearingSpotlights-v0/: WrapperMemoryGym.py  agent_config.py  train.py
xRLAgents/: __init__.py
xRLAgents/agents/: AdaptiveGoalsBuffer.py  AgentAetherMind.py  AgentAetherMindAlpha.py  AgentAetherMindBeta.py  AgentAetherMindBeta_old.py  AgentAetherMindDelta.py  AgentAetherMindDeltaOld.py  AgentAetherMindGamma.py  AgentCuriousExplorers copy.py  AgentCuriousExplorers.py  AgentDiffExp Hierarchy.py  AgentDiffExp.py  AgentDiffExpAdv copy.py  AgentDiffExpAdv.py  AgentDiffExpAdvA.py  AgentDiffExpAdvB.py  AgentDiffExpAdvC.py  AgentDiffExpB copy.py  AgentDiffExpB.py  AgentDiffExpC.py  AgentDiffExpCausal.py  AgentDiffExpD.py  AgentDiffExpE.py  AgentDiffExpEns.py  AgentDiffExpEns.py_old.py  AgentDiffExpF.py  AgentDiffExpFrontier.py  AgentDiffExpModes.py  AgentDiffExpSur.py  AgentDiffExpSurprise.py  AgentPPO.py  AgentPPOCInDiff.py  AgentPPOContinuous.py  (+35 more)
(+37 files in other folders)
