[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xRLAgents"
version = "1.0.0"
description = "reinforcement learning agents"
authors = [
  { name="Michal Chovanec", email="michal.nand@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  # Add runtime dependencies here, e.g. "numpy", "requests>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "mypy"
]

[tool.setuptools.packages.find]
where = ["."]